--- a/packages.html
+++ b/packages.html
@@ -4,72 +4,75 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Packages — Nyxion Labs</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="styles.css"/>
   <link rel="icon" type="image/png" href="./logos/icons/ms-icon-70x70.png"/>
 </head>
 <body>
-<header class="site-header">
-  <a class="brand" href="index.html">
-    <img src="./logos/logo-Photoroom.png"" alt="Nyxion Labs logo"/>
-    <span class="brand-name">Nyxion Labs</span>
-  </a>
-  <nav class="nav">
-    <a href="index.html#solutions">Solutions</a>
-    <a href="contact.html" class="btn btn-contact">Contact</a>
-    <a href="consultation.html" class="btn btn-primary btn-xl nav-cta">Free Consultation</a>
-  </nav>
-</header>
-
-<section class="page-hero">
-  <h1>Packages</h1>
-  <p>Transparent pricing with room to grow.</p>
-</section>
-
-<section class="section">
-  <div class="packages">
-    <div class="pack">
-      <h3>Starter</h3>
-      <div class="price">$799 <span>/ project</span></div>
-      <ul>
-        <li>Discovery & data review</li>
-        <li>1 dashboard or small ML model</li>
-        <li>Email support</li>
-      </ul>
-      <a href="consultation.html" class="btn btn-primary">Call for Consultation</a>
+  <header id="site-header" class="site-header">
+    <div class="container header-inner">
+      <a href="index.html" class="brand">
+        <img class="brand-mark" src="./logos/logo-Photoroom.png" alt="Nyxion Labs"/>
+        <span class="brand-name">Nyxion Labs</span>
+      </a>
+      <nav class="nav">
+        <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="navLinks">
+          <span></span><span></span><span></span>
+        </button>
+        <div id="navLinks" class="nav-links">
+          <a href="index.html#solutions">Solutions</a>
+          <a href="contact.html" class="btn btn-contact">Contact</a>
+          <a href="consultation.html" class="btn btn-primary">Free Consultation</a>
+        </div>
+      </nav>
     </div>
+  </header>
 
-    <div class="pack featured">
-      <h3>Professional</h3>
-      <div class="price">$2,499 <span>/ month</span></div>
-      <ul>
-        <li>3–5 use cases (ML/DL/Dashboards)</li>
-        <li>Azure setup & SSO/RBAC</li>
-        <li>Weekly check-ins</li>
-      </ul>
-      <a href="consultation.html" class="btn btn-primary">Call for Consultation</a>
+  <section class="page-hero">
+    <h1 class="reveal-words">Packages</h1>
+    <p class="fade-up">Transparent pricing with room to grow.</p>
+  </section>
+
+  <section class="section container">
+    <div class="plans">
+      <div class="plan fade-up">
+        <h3>Starter</h3>
+        <div class="price">$799 <span>/ project</span></div>
+        <ul class="bullets">
+          <li>Discovery & data review</li>
+          <li>1 dashboard or small ML model</li>
+          <li>Email support</li>
+        </ul>
+        <a href="consultation.html" class="btn btn-primary">Call for Consultation</a>
+      </div>
+
+      <div class="plan featured fade-up">
+        <h3>Professional</h3>
+        <div class="price">$2,499 <span>/ month</span></div>
+        <ul class="bullets">
+          <li>3–5 use cases (ML/DL/Dashboards)</li>
+          <li>Azure setup & SSO/RBAC</li>
+          <li>Weekly check-ins</li>
+        </ul>
+        <a href="consultation.html" class="btn btn-primary">Call for Consultation</a>
+      </div>
+
+      <div class="plan fade-up">
+        <h3>Enterprise</h3>
+        <div class="price">Custom</div>
+        <ul class="bullets">
+          <li>On-prem/private cloud</li>
+          <li>SLAs & 24/7 support</li>
+          <li>Multi-team rollout</li>
+        </ul>
+        <a href="consultation.html" class="btn btn-primary">Call for Consultation</a>
+      </div>
     </div>
+  </section>
 
-    <div class="pack">
-      <h3>Enterprise</h3>
-      <div class="price">Custom</div>
-      <ul>
-        <li>On-prem/private cloud</li>
-        <li>SLAs & 24/7 support</li>
-        <li>Multi-team rollout</li>
-      </ul>
-      <a href="consultation.html" class="btn btn-primary">Call for Consultation</a>
-    </div>
-  </div>
-</section>
-
-<footer class="site-footer">
-  <div class="foot-links">
-    <a href="packages.html">Packages</a>
-    <a href="consultation.html">Consultation</a>
-    <a href="contact.html">Contact</a>
-  </div>
-  <div class="foot-copy">© 2025 Nyxion Labs</div>
-</footer>
+  <footer class="site-footer">
+    <div class="foot-bottom">© 2025 Nyxion Labs</div>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
