--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Nyxion Labs — Applied AI for Ambitious Teams</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" type="image/png" href="./logos/icons/ms-icon-70x70.png" />
+  <link rel="icon" type="image/png" href="./logos/logo-Photoroom.png" />
 </head>
 <body>
   <!-- Header -->
   <header id="site-header" class="site-header">
     <div class="container header-inner">
       <a href="index.html" class="brand" aria-label="Nyxion Labs home">
-        <img class="brand-mark" src="./logos/logo.png" alt="Nyxion Labs" />
+        <img class="brand-mark" src="./logos/logo-Photoroom.png" alt="Nyxion Labs" />
         <span class="brand-name">Nyxion Labs</span>
       </a>
       <nav class="nav" aria-label="Primary">
