--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
         <span class="brand-name">Nyxion Labs</span>
       </a>
       <nav class="nav" aria-label="Primary">
-        <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="navLinks" aria-label="Toggle menu">
-          <span></span><span></span><span></span>
-        </button>
-        <div id="navLinks" class="nav-links">
-          <a href="#solutions">Solutions</a>
-          <a href="#process">Process</a>
-          <a href="contact.html">Contact</a>
-          <a href="consultation.html" class="btn btn-primary">Get Started</a>
-        </div>
+<button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="navLinks" aria-label="Open menu">
+  <span></span><span></span><span></span>
+</button>
+
+<div id="navLinks" class="nav-links">
+  <a href="index.html#solutions">Solutions</a>
+  <a href="packages.html">Packages</a>
+  <a href="index.html#process">Process</a>
+  <a href="contact.html">Contact</a>
+  <a href="consultation.html" class="btn btn-primary btn-sm">Get Started</a>
+</div>
       </nav>
     </div>
   </header>
@@ -46,6 +48,7 @@
       <div class="hero-actions fade-up">
         <a href="consultation.html" class="btn btn-white">Schedule Free Consultation</a>
         <a href="#solutions" class="btn btn-outline">Explore Solutions</a>
+        
       </div>
     </div>
   </div>
@@ -148,7 +151,7 @@
             <li>Zero-trust architecture</li>
             <li>Compliance frameworks</li>
           </ul>
-          <a href="consultation.html" class="btn btn-primary btn-sm">Book Call</a>
+          <a href="consultation.html" class="btn btn-white btn-sm">Book Free Consultation</a>
         </div>
         <div class="banner-media">
           <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=1400&auto=format&fit=crop" alt="Cloud infrastructure" />
@@ -232,16 +235,6 @@
           </div>
         </div>
       </div>
-
-      <div class="process-cta">
-        <div class="cta-content">
-          <h3>Ready to Get Started?</h3>
-          <p>Let's discuss your specific needs and create a custom roadmap for your AI implementation.</p>
-          <a href="consultation.html" class="btn btn-white">Book Free Consultation</a>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- CTA -->
   <section class="cta">
