fixed footer and calendly link

--- a/consultation.html
+++ b/consultation.html
@@ -53,7 +53,7 @@
 
       <div class="cta-row">
         <a href="#" class="btn btn-primary btn-sm"
-           data-calendly="https://calendly.com/your-handle/free-consultation-20min">
+           data-calendly="https://calendly.com/nyxionlabs/">
           Request Free Consultation
         </a>
         <a href="mailto:hello@nyxionlabs.com" class="btn btn-white btn-sm">Prefer email?</a>
@@ -99,11 +99,11 @@
         <div class="card">
           <h2>Pick a time</h2>
           <div class="calendly-inline-widget"
-               data-url="https://calendly.com/your-handle/free-consultation-20min"
+               data-url="https://calendly.com/nyxionlabs/"
                style="min-width:260px;height:760px;"></div>
           <p class="tiny">
             Having trouble? <a href="#"
-              data-calendly="https://calendly.com/your-handle/free-consultation-20min">Open the popup</a>.
+              data-calendly="https://calendly.com/nyxionlabs/">Open the popup</a>.
           </p>
         </div>
 
@@ -137,11 +137,7 @@
     <div class="foot-bottom">© 2025 Nyxion Labs. All rights reserved.</div>
   </footer>
 
-  <script src="script.js"></script>
-</body>
-</html>
-
-  <!-- Site JS (already wires up [data-calendly] clicks) -->
+  
   <script src="script.js"></script>
 </body>
 </html>
