--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
       <p>Tell us what you’re building. We’ll reply within one business day.</p>
       <div class="contact-quick">
         <a class="chip" href="mailto:hello@nyxionlabs.com">hello@nyxionlabs.com</a>
-        <a class="chip" href="#" data-calendly="https://calendly.com/your-handle/free-consultation-20min">Book 20-min call</a>
+        <a class="chip" href="#" data-calendly="https://calendly.com/nyxionlabs/">Book 20-min call</a>
         <span class="chip">Avg. response: &lt;24h</span>
       </div>
     </section>
@@ -96,7 +96,7 @@
             <p class="form-error" hidden>Sorry, something went wrong. Please email <a href="mailto:info@nyxionlabs.com">info@nyxionlabs.com</a>.</p>
 
             <button type="submit" class="btn btn-primary btn-sm">Send message</button>
-            <a href="#" class="btn btn-outline btn-sm" data-calendly="https://calendly.com/your-handle/free-consultation-20min">Or book a quick call</a>
+            <a href="#" class="btn btn-outline btn-sm" data-calendly="https://calendly.com/nyxionlabs/">Or book a quick call</a>
           </form>
         </div>
 
@@ -132,7 +132,7 @@
 
         <div class="card">
           <h3>Pick a time</h3>
-          <div class="calendly-inline-widget" data-url="https://calendly.com/your-handle/free-consultation-20min" style="min-width:260px;height:660px;"></div>
+          <div class="calendly-inline-widget" data-url="https://calendly.com/nyxionlabs/" style="min-width:260px;height:660px;"></div>
         </div>
       </aside>
     </section>
