--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
     </div>
   </header>
-
+  <main>
   <!-- Hero (video background) -->
 <section class="hero">
   <video class="hero-video" autoplay muted loop playsinline>
@@ -235,7 +235,7 @@
           </div>
         </div>
       </div>
-
+    </section>
   <!-- CTA -->
   <section class="cta">
     <div class="container">
@@ -244,6 +244,7 @@
       <a href="consultation.html" class="btn btn-white fade-up">Schedule Free Consultation</a>
     </div>
   </section>
+</main>
 
   <!-- Footer -->
   <footer class="site-footer">
