--- a/index.html
+++ b/index.html
@@ -70,12 +70,16 @@
         </button>
 
         <div id="navLinks" class="nav-links">
+          <a href="/demos/" class="btn btn-primary">Try Live AI Demos</a>
           <a href="#solutions">Solutions</a>
           <a href="packages.html">Packages</a>
           <a href="#process">Process</a>
           <a href="#case-studies">Case Studies</a>
           <a href="contact.html">Contact</a>
-<a href="consultation.html" class="btn btn-primary">Get Started</a>
+          <a href="consultation.html" class="btn btn-primary">Get Started</a>
+          
+
+
         </div>
       </nav>
     </div>
